TB-25330: Sonar Qube PR analysis Fixes 10 smells